--- a/galeria.html
+++ b/galeria.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Galeria</title>
-        <link rel="stylesheet" href="../sitio_practicas/css/galeriacss.css" type="text/css">
+        <link href="css/galeriacss.css" rel="stylesheet" type="text/css">
         <style type="text/css">
         .section_galeria table ,  .section_galeria table td  , .section_galeria table th{
     text-align: center;
